service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bimbs-app-service
spec:
  selector:
    app: bimbs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4004
      nodePort: 30080  # NodePort configuration (optional for local testing)
  type: NodePort  # Type of service is NodePort
