ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bimbs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bimbs.dev
    http:
      paths:
      - path: /api/health
        pathType: Prefix
        backend:
          service:
            name: bimbs-app-service
            port:
              number: 80
